add api payment

--- a/src/layout/profile/Component/testHistory.module.css
+++ b/src/layout/profile/Component/testHistory.module.css
@@ -247,7 +247,7 @@
     padding: 14px;
   }
 
-  .columnStt, .columnScore, .columnCorrect, .columnTime, .columnDownload {
+  .columnStt, .columnScore, .columnCorrect, .columnTime, .columnDownload, .columnPrint {
     width: auto;
   }
 }
