--- a/src/layout/profile/Component/OverView/Overview.css
+++ b/src/layout/profile/Component/OverView/Overview.css
@@ -327,7 +327,7 @@
   align-items: center;
 }
 
-.notification-icon {
+.notification-iconn {
   width: 32px;
   height: 32px;
   border-radius: 50%;
